# XJGARSDKDemoApp-IOS

./: .gitattributes  AppDelegate.h  CameraViewController.h  CameraViewController.mm  ImageViewController.h  ImageViewController.mm  MainViewController.h  README.md  XJGARSDKResInterface.h  XJGARSDKResInterface.mm  XJGARSDKResSelViewController.h  XJGARSDKResSelViewController.mm  plist.in
XJGARSDKDemo/: XJGARSDKCameraOperator.h  XJGARSDKFramebuffer.h  XJGARSDKGPUImage.h  XJGARSDKGPUImageTarget.h  XJGARSDKGPUImageView.mm  XJGARSDKImageOperator.cpp  XJGARSDKImageOperator.h  XJGARSDKShaderProgram.h
XJGARSDKDemoApp-ios/: ._AppDelegate.h  ._AppDelegate.mm  ._CMakeLists.txt  ._CameraViewController.h  ._CameraViewController.mm  ._ImageViewController.h  ._ImageViewController.mm  ._MainViewController.h  ._MainViewController.mm  ._XJGARSDKResInterface.h  ._XJGARSDKResInterface.mm  ._XJGARSDKResSelViewController.h  ._XJGARSDKResSelViewController.mm  ._ios.cmake  ._main.mm  ._plist.in  AppDelegate.mm  CMakeLists.txt  CameraViewController.mm  MainViewController.mm  main.mm
XJGARSDKDemoApp-ios/XJGARSDKDemo/: ._XJGARSDKCameraOperator.cpp  ._XJGARSDKCameraOperator.h  ._XJGARSDKFramebuffer.cpp  ._XJGARSDKFramebuffer.h  ._XJGARSDKGLESContextManager.cpp  ._XJGARSDKGLESContextManager.h  ._XJGARSDKGPUImage.h  ._XJGARSDKGPUImageTarget.h  ._XJGARSDKGPUImageView.h  ._XJGARSDKGPUImageView.mm  ._XJGARSDKImageOperator.cpp  ._XJGARSDKImageOperator.h  ._XJGARSDKMacroDefinitions.h  ._XJGARSDKShaderProgram.cpp  ._XJGARSDKShaderProgram.h  XJGARSDKCameraOperator.cpp  XJGARSDKFramebuffer.cpp  XJGARSDKGLESContextManager.cpp  XJGARSDKGLESContextManager.h  XJGARSDKGPUImageView.h  XJGARSDKMacroDefinitions.h  XJGARSDKShaderProgram.cpp
XJGARSDKDemoApp-ios/XJGARSDKFramework.framework/: Info.plist
XJGARSDKDemoApp-ios/XJGARSDKFramework.framework/Headers/: XJGArSdk.h
XJGARSDKDemoApp-ios/XJGARSDKFramework.framework/_CodeSignature/: CodeResources
XJGARSDKDemoApp-ios/Xcode/: CMakeCache.txt  cmake_install.cmake
XJGARSDKDemoApp-ios/Xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  XCODE_DEPEND_HELPER.make  XJGARSDKDemoApp_postBuildPhase.makeRelease
XJGARSDKDemoApp-ios/Xcode/SharedPrecompiledHeaders/Prefix-aankwswsjuimzhcknhapozjqdfty/: Prefix.pch.data
XJGARSDKDemoApp-ios/Xcode/SharedPrecompiledHeaders/Prefix-djjmijrykfpuckbtmrdpowbllxch/: Prefix.pch.pch.hash-criteria
XJGARSDKDemoApp-ios/Xcode/SharedPrecompiledHeaders/Prefix-ffxhficyjfczlbauefydywoqqvvy/: Prefix.pch.data  Prefix.pch.pch.hash-criteria
XJGARSDKDemoApp-ios/Xcode/XJGARSDKDemoApp.build/Debug-iphoneos/ALL_BUILD.build/: Script-865ECAA8C24240B4B032D226.sh  dgph  dgph~
XJGARSDKDemoApp-ios/Xcode/XJGARSDKDemoApp.build/Debug-iphoneos/XJGARSDKDemoApp.build/: dgph
XJGARSDKDemoApp-ios/Xcode/XJGARSDKDemoApp.build/Release-iphoneos/ZERO_CHECK.build/: dgph
XJGARSDKDemoApp-ios/Xcode/XJGARSDKDemoApp.xcodeproj/: project.pbxproj
XJGARSDKDemoApp-ios/Xcode/XJGARSDKDemoApp.xcodeproj/project.xcworkspace/xcuserdata/jianxinluo.xcuserdatad/: UserInterfaceState.xcuserstate
XJGARSDKDemoApp-ios/Xcode/XJGARSDKDemoApp.xcodeproj/xcuserdata/jianxinluo.xcuserdatad/xcschemes/: XJGARSDKDemoApp.xcscheme  ZERO_CHECK.xcscheme
XJGARSDKDemoApp-ios/Xcode/cppframework/: cmake_install.cmake
XJGARSDKDemoApp-ios/Xcode/cppframework/CMakeScripts/: TestFramework_postBuildPhase.makeRelease
XJGARSDKDemoApp-ios/Xcode/cppframework/XJGARSDKDemoApp.build/Debug-iphoneos/TestFramework.build/: dgph
XJGARSDKDemoApp-ios/__MACOSX/: ._CMakeLists.txt  ._CameraViewController.mm  ._ImageViewController.h  ._ImageViewController.mm  ._MainViewController.h  ._MainViewController.mm  ._XJGARSDKResInterface.mm  ._plist.in
XJGARSDKDemoApp-ios/__MACOSX/XJGARSDKDemo/: ._XJGARSDKFramebuffer.h  ._XJGARSDKGLESContextManager.cpp  ._XJGARSDKGLESContextManager.h  ._XJGARSDKGPUImageView.h  ._XJGARSDKGPUImageView.mm  ._XJGARSDKImageOperator.cpp  ._XJGARSDKMacroDefinitions.h  ._XJGARSDKShaderProgram.h
XJGARSDKDemoApp-ios/__MACOSX/cppframework/: ._CMakeLists.txt  ._Foo.hh
XJGARSDKDemoApp-ios/cppframework/: ._CMakeLists.txt  ._Foo.hh  CMakeLists.txt
XJGARSDKDemoApp-ios/resbundle.bundle/: Info.plist
XJGARSDKFramework.framework/: Info.plist
XJGARSDKFramework.framework/Headers/: XJGArSdk.h
XJGARSDKFramework.framework/_CodeSignature/: CodeResources
Xcode/CMakeScripts/: ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
Xcode/SharedPrecompiledHeaders/Prefix-aankwswsjuimzhcknhapozjqdfty/: Prefix.pch.d  Prefix.pch.pch.hash-criteria
Xcode/SharedPrecompiledHeaders/Prefix-djjmijrykfpuckbtmrdpowbllxch/: Prefix.pch.data
Xcode/XJGARSDKDemoApp.build/Debug-iphoneos/ZERO_CHECK.build/: dgph
Xcode/XJGARSDKDemoApp.xcodeproj/xcuserdata/jianxinluo.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  TestFramework.xcscheme  xcschememanagement.plist
__MACOSX/: ._AppDelegate.h  ._AppDelegate.mm  ._CameraViewController.h  ._XJGARSDKResInterface.h  ._XJGARSDKResSelViewController.h  ._XJGARSDKResSelViewController.mm  ._ios.cmake  ._main.mm
__MACOSX/XJGARSDKDemo/: ._XJGARSDKCameraOperator.cpp  ._XJGARSDKCameraOperator.h  ._XJGARSDKFramebuffer.cpp  ._XJGARSDKGPUImage.h  ._XJGARSDKGPUImageTarget.h  ._XJGARSDKImageOperator.h  ._XJGARSDKShaderProgram.cpp
__MACOSX/Xcode/cppframework/: ._XJGARSDKDemoApp.build
resbundle.bundle/: Info.plist
